...
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="252" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Text to reverse" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6Ti-ND-OG0">
                                <rect key="frame" x="16" y="250" width="382" height="24.5"/>
                                <accessibility key="accessibilityConfiguration" identifier="reverseTextField"/>
                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                <textInputTraits key="textInputTraits" returnKeyType="done"/>
                                <connections>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="P82-6x-79O"/>
                                </connections>
                            </textField>
...
                                <subviews>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9R7-VM-cx1" userLabel="Content View">
                                        <rect key="frame" x="0.0" y="0.0" width="140.5" height="29"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="Reversed text" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JkS-t2-wMw">
                                                <rect key="frame" x="0.0" y="0.0" width="140.5" height="29"/>
                                                <accessibility key="accessibilityConfiguration" identifier="resultLabel"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                                <color key="textColor" systemColor="tintColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                        </subviews>
                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
...
                                <viewLayoutGuide key="contentLayoutGuide" id="t8w-s6-8IB"/>
                                <viewLayoutGuide key="frameLayoutGuide" id="QcB-4u-y2T"/>
                            </scrollView>
                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="V4R-FF-UX4">
                                <rect key="frame" x="16" y="292.5" width="382" height="32"/>
                                <segments>
                                    <segment title="Default"/>
                                    <segment title="Custom"/>
                                </segments>
                                <connections>
                                    <action selector="filterSegmentedControlChanged" destination="BYZ-38-t0r" eventType="valueChanged" id="LiI-GL-xPb"/>
                                </connections>
                            </segmentedControl>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="All characters except alphabetic symbols" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iwo-Ww-dqU">
                                <rect key="frame" x="16" y="338" width="382" height="21"/>
                                <accessibility key="accessibilityConfiguration" identifier="defaultInformationLabel"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Text to ignore" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="RwL-it-5Ti">
                                <rect key="frame" x="16" y="331.5" width="382" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="customFilterTextField"/>
                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
...
